@@ -2,6 +2,7 @@
 -Added command line option (-s or --time-scale) to set the time scale
 -Added tabular data panel
 -Fix text data panel
+-Hide hidden channels by default. Add option to view menu.
 
 1.1.0 - March 22, 2005
 -Expanded domain slider to include usecond and day time values
